deploy/k8s/base/ui-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ui
  namespace: mydocs
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mydocs-ui
  template:
    metadata:
      labels:
        app: mydocs-ui
    spec:
      containers:
        - name: ui
          image: mydocs-ui:latest
          ports:
            - containerPort: 80
          livenessProbe:
            httpGet:
              path: /
              port: 80
            periodSeconds: 30
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 128Mi
