deploy/k8s/base/backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: mydocs
spec:
  selector:
    app: mydocs-backend
  ports:
    - port: 8000
      targetPort: 8000
