deploy/k8s/base/ui-service.yml
apiVersion: v1
kind: Service
metadata:
  name: ui
  namespace: mydocs
spec:
  selector:
    app: mydocs-ui
  ports:
    - port: 80
      targetPort: 80
